# research-copilot

./: .gitignore  MVP.md  PROMPT_BACKEND.md  PROMPT_FRONTEND.md  README.md  app.py  arxiv_example.py  dev.ipynb  main.py  paper.py  papers.json  pyproject.toml  storage.py  test_streamlit.py  vim_mock.py
backend/: API_SPECS.md  main.py  pyproject.toml
backend/database/: connection.py  schema.sql
backend/repositories/: dashboard_repository.py  paper_repository.py
backend/routers/dashboard/: endpoint.py  model.py  service.py
backend/routers/papers/: endpoint.py  model.py  service.py
backend/routers/search/: endpoint.py  model.py  service.py
frontend/: CANVAS_IMPLEMENTATION.md  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  WORK_SUMMARY.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: NoteNode.tsx  PaperGroup.tsx
frontend/app/dashboard/: page.tsx
frontend/app/paper/[id]/: page.tsx
frontend/components/atoms/: Badge.tsx  Button.tsx  Input.tsx
frontend/components/molecules/: NoteCard.tsx  TagInput.tsx
frontend/components/organisms/: CanvasNoteCard.tsx  NoteModal.tsx  NotesCanvas.tsx  PaperCard.tsx  PdfViewer.tsx  SearchModal.tsx
frontend/lib/: api.ts  utils.ts
frontend/tokens/: colors.ts  shadows.ts  spacing.ts  typography.ts
frontend/types/: index.ts
package/utils/: data_utils.py
pages/: 1_Search.py  2_Dashboard.py  3_Paper.py
